--- a/Horiseon/index.html
+++ b/Horiseon/index.html
@@ -4,13 +4,18 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon Website Challenge</title>
 </head>
 
 <body>
-    <div class="header">
+    <!--header & nav-->
+    <!--Start of Header-->
+    <header
+    class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
+            <!--Start of nav-->
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,11 +27,18 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
+        </nav>    
+        <!--End of Nav-->
         </div>
     </div>
-    <div class="hero"></div>
-    <div class="content">
-        <div class="search-engine-optimization">
+    </header>
+    <!--End Of Header-->
+    <!--Image-->
+    <figure class="hero"></figure>
+    <!--content-->
+    <div>
+        <main class="content">
+            <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
