--- a/Horiseon/index.html
+++ b/Horiseon/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon Website Challenge</title>
+    <title>Horiseon Website My First Challenge</title>
 </head>
 
 <body>
