--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="Horiseon/assets/css/style.css">
     <title>Horiseon Website My First Challenge</title>
 </head>
 
